--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-date-pickers": "^8.12.0",
     "@types/react-datepicker": "^6.2.0",
+    "date-fns": "^4.1.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1"
   },
