--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-date-pickers": "^8.12.0",
+    "@tanstack/react-query": "^5.90.2",
     "@types/react-datepicker": "^6.2.0",
     "date-fns": "^4.1.0",
     "next": "15.5.4",
